--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ gunicorn = "*"
 cloudinary = "*"
 flask-admin = "*"
 typing-extensions = "*"
+flask-jwt-extended = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.10"
