--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,12 @@ DEBUG=TRUE
 # Front-End Variables
 BASENAME=/
 #BACKEND_URL=
+
+
+# cuando da este error de conector
+
+# sqlalchemy.exc.NoSuchModuleError: Can't load plugin: sqlalchemy.dialects:postgres
+
+# 1) Verificar el Pipfile
+
+# 2) agregar en .env el DATABASE_URL=postgresql+psycopg2://gitpod:postgres@localhost:5432/example
