--- a/.env.example
+++ b/.env.example
@@ -3,21 +3,20 @@
 # 1. In the back end code you access the variable by importing os and then typing print(os.getenv('VARIABLE_NAME'))
 
 # Back-End Variables
-DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
+# This file includes global variables that will be available inside your project
+# 1. In the front end code you can access this variables like this: console.log(process.env.VARIABLE_NAME)
+# 1. In the back end code you access the variable by importing os and then typing print(os.getenv('VARIABLE_NAME'))
+
+# Back-End Variables
+DATABASE_URL=postgresql+psycopg2://gitpod:postgres@localhost:5432/example
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_DEBUG=1
 DEBUG=TRUE
+FLASK_ENV=development
+JWT_SECRET= JSKADF%859&UFG759%8687gyuiiu$KJG
 
 # Front-End Variables
 BASENAME=/
+BACKEND_URL=http://localhost:3001
 #BACKEND_URL=
-
-
-# cuando da este error de conector
-
-# sqlalchemy.exc.NoSuchModuleError: Can't load plugin: sqlalchemy.dialects:postgres
-
-# 1) Verificar el Pipfile
-
-# 2) agregar en .env el DATABASE_URL=postgresql+psycopg2://gitpod:postgres@localhost:5432/example
